load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//examples/webpack_cli:webpack-cli/package_json.bzl", "bin")

npm_link_all_packages(
    name = "node_modules",
)

js_test(
    name = "test",
    data = [
        ":node_modules/mathjs",
        ":package.json",
    ],
    entry_point = "index.js",
)

js_library(
    name = "lib",
    srcs = [
        "index.js",
        "package.json",
    ],
    deps = [
        ":node_modules/mathjs",
    ],
)

filegroup(
    name = "css_webpack_deps",
    srcs = [
        ":index.css.ts",
        # Note(ray): tried to just dump all node_modules, also didn't resolve
        ":node_modules",
        ":node_modules/@vanilla-extract/webpack-plugin",
        ":node_modules/css-loader",
        ":node_modules/mini-css-extract-plugin",
        ":node_modules/webpack",
        ":node_modules/webpack-cli",
        # Note(ray): tried adding schema-utils directly to resolve, no dice
        # ":node_modules/schema-utils",
    ],
)

bin.webpack_cli(
    name = "bundle",
    srcs = [
        ":webpack.config.js",
        ":lib",
        ":css_webpack_deps"
    ],
    outs = [
        "dist/main.js",
    ],
    args = [
        "--config webpack.config.js",
    ],
    chdir = package_name(),
    log_level = "debug",
)
